maintenability refactorings